# reettier

./: .gitattributes  .gitignore  CHANGELOG.md  CONTEXT.md  Cargo.toml  PLAN_merge.md  README.md  install.ps1  install.sh  onpull.sh  reettier.jsonc.template  release.ps1  release.sh
docs/: trailing-closer-split-plan.md  windows-crlf-investigation.md
docs/adr/: 0001-merge-reefmt-into-reettier.md  0002-self-verify-both-modes.md
src/: config.rs  discovery.rs  engine.rs  format.rs  main.rs  ree.rs  tokenizer.rs
src/full/: ast_check.rs  format.rs  mod.rs  ree_format.rs  ree_parser.rs  remove_unused_imports.rs  swc_format.rs
src/full/swc_printer/: decl.rs  expr.rs  lit.rs  mod.rs  pat.rs  prop.rs  stmt.rs  types.rs
