[package]
name = "reettier"
version = "0.1.11"
edition = "2021"
description = "A layout-preserving formatter for Ree Templates and their embedded JS/TS/CSS."

[[bin]]
name = "reettier"
path = "src/main.rs"

[dependencies]
glob = "0.3"
similar = "2"
serde = { version = "1", features = ["derive"] }
json5 = "0.4"
rayon = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1




